# OpenGLRenderBench

./: .gitignore  CMakeLists.txt  main.cpp
assets/: brdf_lut.ktx2
assets/ibl/SunnySky/: SunnySky_irradiance.ktx2
assets/shaders/: blinn_phong.fs  bloom_blur.fs  bloom_composite.fs  bloom_extract.fs  forward_pbr.fs  forward_pbr.vs  fragPos.fs  fragPos.vs  gbuffer_pbr.fs  gbuffer_pbr.vs  lighting_pass.fs  lighting_pass.vs  mask.fs  mask.vs  normal.fs  normal.vs  outline.fs  pbr.fs  pbr.vs  screen.fs  screen.vs  shadow_pass.fs  shadow_pass.vs  skybox.fs  skybox.vs  ssao.fs  ssao_blur.fs  unlit.fs  unlit.vs  z_pre.fs  z_pre.vs
src/app/: Application.cpp  Application.hpp
src/app/frame/: EditorCommandsFrame.hpp  RenderContextFrame.hpp
src/core/: DirectoryWatcher.cpp  DirectoryWatcher.hpp  FileDialog.cpp  FileDialog.hpp  Log.cpp  Log.hpp  ThreadPool.cpp  ThreadPool.hpp  file_io.hpp  glfw_globals.hpp  noncopyable.hpp  opengl.cpp  opengl.hpp  path.cpp  path.hpp
src/editor/: EditorState.hpp  EditorUi.cpp  EditorUi.hpp
src/editor/scene/: Components.hpp  Entity.hpp  LightSystem.cpp  LightSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  Scene.cpp  Scene.hpp  SparseSet.hpp
src/renderer/asset/: AssetManager.cpp  AssetManager.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PrimitiveFactory.cpp  PrimitiveFactory.hpp  Texture2D.cpp  Texture2D.hpp  TextureCube.cpp  TextureCube.hpp  Vertex.hpp
src/renderer/asset/importer/: GltfImporter.cpp  GltfImporter.hpp  ImportedModelData.hpp  RuntimeAssetBuilder.cpp  RuntimeAssetBuilder.hpp  RuntimeModelAsset.hpp
src/renderer/camera/: Camera.hpp  OrbitController.cpp  OrbitController.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
src/renderer/core/: FrameBuffer.cpp  FrameBuffer.hpp  Shader.cpp  Shader.hpp  ShadowFrameBuffer.cpp  ShadowFrameBuffer.hpp  Window.cpp  Window.hpp
src/renderer/material/: BlinnPhongMaterial.cpp  BlinnPhongMaterial.hpp  DeferredMaterial.hpp  ForwardMaterial.hpp  Material.hpp  PbrMaterial.cpp  PbrMaterial.hpp  UnlitMaterial.cpp  UnlitMaterial.hpp
src/renderer/pipeline/: BloomPass.cpp  BloomPass.hpp  ForwardPass.cpp  ForwardPass.hpp  FragPosPass.cpp  FragPosPass.hpp  GBufferPass.cpp  GBufferPass.hpp  LightingPass.cpp  LightingPass.hpp  MaskPass.cpp  MaskPass.hpp  NormalPass.cpp  NormalPass.hpp  OutlinePass.cpp  OutlinePass.hpp  PresentPass.cpp  PresentPass.hpp  RenderContextFrame.hpp  RenderItem.hpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  SSAOPass.cpp  SSAOPass.hpp  ScenePass.cpp  ScenePass.hpp  ShadowPass.cpp  ShadowPass.hpp  SkyboxPass.cpp  SkyboxPass.hpp  ZPrePass.cpp  ZPrePass.hpp
submodule/precomputer/: BrdfLutBaker.cpp  BrdfLutBaker.hpp  CMakeLists.txt  EnvironmentBaker.cpp  EnvironmentBaker.hpp  KtxWriter.cpp  KtxWriter.hpp  PreviewPass.cpp  PreviewPass.hpp  file_io.hpp  main.cpp
submodule/precomputer/gl/: GlContext.cpp  GlContext.hpp  Shader.cpp  Shader.hpp
submodule/precomputer/shader/: brdf_lut.frag  brdf_lut.vert  equirect_to_cubemap.frag  equirect_to_cubemap.vert  irradiance_convolution.frag  prefilter_environment.frag  preview.frag
